Tue Aug 25 11:48:00 2009 Kirk Haines <khaines@ruby-lang.org>

	* Backport #1168; Wrong result of File.extname for a path that contains a space before the extension.

	* Backport #1975 [ruby-core:25025]; Dir.mktmpdir exists in the rest of the 1.8 line, and it is used in the test suite that goes with backport #1168. It doesn't conflict with any existing 1.8.6 art, and is a pure-ruby addition to Dir, so I backported it to 1.8.6 from 1.8.7.

	* Backport #1509 [ruby-dev:38538]; Typo in CGI::HTTP_STATUS: Rrecondition -> Precondition

Thu Aug 20  9:43:00 2009 Kirk Haines <khaines@ruby-lang.org>

	* Backport #1001; Handle EBADF to fix problem with interpreter wide deadlock when native close() is called on fd which is currently being IO#select()ed. r24600

Wed Aug 19  1:49:00 2009 Kirk Haines <khaines@ruby-lang.org>

	* Backport #1232; Writes one extra byte to the buffer in order to prevent overrun. r24583

Tue Aug 4   8:53:00 2009 Kirk Haines <khaines@ruby-lang.org>

	* lib/rdoc/parsers/parse_c.rb: Fixed a small error in the documentation.

Mon Aug 3  10:06:00 2009 Kirk Haines <khaines@ruby-lang.org>

	* lib/date.rb: Added private on to_date and to_datetime back; this should not have been backported to 1.8.6 from 1.9 yet, since it hasn't gone into 1.8.8/1.8.7.

Wed Jul 29 17:04:00 2009 Kirk Haines <khaines@ruby-lang.org>

	* ext/tk/extconf.rb: Added some additional paths where TCL files are common found; fixes problems with building on some distributions.

Tue Jul 14 13:14:00 2009 Kirk Haines <khaines@ruby-lang.org>

	* lib/complex.rb: Adjust #angle/#arg NaN return as per issue #1715 and recent rubyspec changes. Adjust angle/arg handling of (-0.0).angle as per r23960 & recent rubyspec changes.

Mon Jul 13 12:00:00 2009 Kirk Haines <khaines@ruby-lang.org>

	* numeric.c, bignum.c: Applied changes from r23730. Infinity is > any bignum number in comparisons.

	* configure.in: fixed problems with using $libdir instead of $prefix/lib for RUBY_LIB and friends.
