@@ -1,15 +1,15 @@
 #define RUBY_VERSION "1.8.6"
-#define RUBY_RELEASE_DATE "2009-08-26"
+#define RUBY_RELEASE_DATE "2009-09-08"
 #define RUBY_VERSION_CODE 186
-#define RUBY_RELEASE_CODE 20090826
-#define RUBY_PATCHLEVEL 387
+#define RUBY_RELEASE_CODE 20090908
+#define RUBY_PATCHLEVEL 388
 
 #define RUBY_VERSION_MAJOR 1
 #define RUBY_VERSION_MINOR 8
 #define RUBY_VERSION_TEENY 6
 #define RUBY_RELEASE_YEAR 2009
-#define RUBY_RELEASE_MONTH 8
-#define RUBY_RELEASE_DAY 26
+#define RUBY_RELEASE_MONTH 9
+#define RUBY_RELEASE_DAY 8
 
 #ifdef RUBY_EXTERN
 RUBY_EXTERN const char ruby_version[];
